--- a/VaccineC/src/app/pages/minha-conta/minha-conta.component.scss
+++ b/VaccineC/src/app/pages/minha-conta/minha-conta.component.scss
@@ -1,3 +1,15 @@
 .my-account-card {
     align-items: center;
 }
+
+.section-main {
+    margin-left: 7.5rem;
+}
+
+.container-retract {
+    margin-left: 14.5rem;
+}
+
+.container-expand {
+    margin-left: 7.5rem;
+}
