--- a/VaccineC/src/app/pages/pessoas/pessoas-telefones/pessoas-telefones.component.html
+++ b/VaccineC/src/app/pages/pessoas/pessoas-telefones/pessoas-telefones.component.html
@@ -21,7 +21,7 @@
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
 
-        <button mat-fab id="add-phone-btn" color="primary" aria-label="Add button" matTooltip="Inserir Telefone"
+        <button mat-fab id="add-phone-btn" (click)="openPhoneDialog()" color="primary" aria-label="Add button" matTooltip="Inserir Telefone"
             matTooltipPosition="above">
             <mat-icon>add</mat-icon>
         </button>
