--- a/VaccineC/src/app/shared/components/side-menu/side-menu.component.html
+++ b/VaccineC/src/app/shared/components/side-menu/side-menu.component.html
@@ -83,7 +83,7 @@
             </div>
             <div id="collapseManagement" [collapse]="isCollapsedManagement" [isAnimated]="true" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <a class="collapse-item" href="/empresas">EMPRESAS</a>
+                    <a class="collapse-item" href="/empresas">EMPRESA</a>
                     <a class="collapse-item" href="/gerenciar-usuarios">GERENCIAR USUÁRIOS</a>
                     <a class="collapse-item" href="/visao-faturamento">VISÃO FATURAMENTO</a>
                     <a class="collapse-item" href="/recursos">RECURSOS</a>
