--- a/VaccineC/src/app/pages/minha-conta/minha-conta.component.html
+++ b/VaccineC/src/app/pages/minha-conta/minha-conta.component.html
@@ -11,9 +11,10 @@
                                 class="rounded-circle img-fluid" style="width: 150px;">
                             <h5 class="my-3 text-gray-800">John Doe</h5>
                             <p class="text-muted mb-1">john.doe@empresa.com</p>
-                            <p class="text-muted mb-4">Desenvolvedor Full Stack</p>
+                            <p class="text-muted mb-4">Enfermeiro</p>
                             <div class="d-flex justify-content-center mb-2">
-                                <button type="button" class="mat-primary" mat-raised-button (click)="openDialog()">Alterar Senha</button>
+                                <button mat-raised-button color="primary" class="me-2">Senha</button>
+                                <button mat-raised-button>Cadastro</button>
                             </div>
                         </div>
                     </div>
