--- a/VaccineC/src/app/pages/pessoas/pessoas-complemento/pessoas-complemento.component.html
+++ b/VaccineC/src/app/pages/pessoas/pessoas-complemento/pessoas-complemento.component.html
@@ -5,7 +5,7 @@
             <div class="div-row-input">
                 <mat-form-field appearance="fill" class="col-sm-6">
                     <mat-label>CPF</mat-label>
-                    <input type="number" matInput #input maxlength="11" placeholder="000.000.000-00" id="cpfNumber">
+                    <input type="number" matInput #input maxlength="11" placeholder="000.000.000-00" id="cpfNumber" required="true">
                 </mat-form-field>
                 <mat-form-field appearance="fill" class="col-sm-5 ml-0">
                     <mat-label>CNS</mat-label>
@@ -27,7 +27,7 @@
 
                 <mat-form-field appearance="fill" class="col-sm-5 ml-0">
                     <mat-label>Gênero</mat-label>
-                    <mat-select id="gender">
+                    <mat-select id="gender" required="true">
                         <mat-option value="M">Masculino</mat-option>
                         <mat-option value="F">Feminino</mat-option>
                         <mat-option value="O">Outro</mat-option>
