--- a/VaccineC/src/app/pages/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
+++ b/VaccineC/src/app/pages/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
@@ -2,7 +2,7 @@
     <div class="col-sm-11 p-0">
         <mat-form-field class="search-form-field col-sm-10" appearance="fill">
             <mat-label>Digite o nome da pessoa ou o CPF</mat-label>
-            <input matInput type="text" [(ngModel)]="value">
+            <input matInput type="text" [(ngModel)]="value" placeholder="(mínimo 3 caracteres)">
             <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
                 <mat-icon>close</mat-icon>
             </button>
