--- a/VaccineC/src/app/pages/recursos/recursos.component.html
+++ b/VaccineC/src/app/pages/recursos/recursos.component.html
@@ -4,7 +4,7 @@
         <app-toolbar></app-toolbar>
         <app-container containerTitle="Recursos" containerPath="Gerencial / Recursos">
             <mat-tab-group>
-                  <mat-tab label="Pesquisa">
+                <mat-tab label="Pesquisa">
                     <div class="search-group">
                         <div class="col-sm-11 p-0">
                             <mat-form-field class="search-form-field col-sm-10" appearance="fill">
@@ -27,7 +27,7 @@
                             </ng-container>
 
                             <ng-container matColumnDef="resourceUrl">
-                                <mat-header-cell *matHeaderCellDef> Url </mat-header-cell>
+                                <mat-header-cell *matHeaderCellDef> URL </mat-header-cell>
                                 <mat-cell *matCellDef="let element"> {{element.resourceUrl}} </mat-cell>
                             </ng-container>
 
@@ -38,36 +38,38 @@
                 </mat-tab>
 
                 <mat-tab label="Cadastro">
-                  <div class="registration-group">
-                      <div class="offset-sm-1 col-sm-11 p-0">
-                          <div class="example-container">
-                              <mat-form-field appearance="fill" class="col-sm-6">
-                                  <mat-label>Recurso</mat-label>
-                                  <input matInput #input maxlength="10" placeholder="Pessoas" id="resources">
-                              </mat-form-field>
+                    <div class="registration-group">
+                        <div class="offset-sm-1 col-sm-11 p-0">
 
-                              <mat-form-field appearance="fill" class="col-sm-5 ml-0">
-                                <mat-label>Url</mat-label>
-                                <input matInput #input maxlength="10" placeholder="https://vaccinec.com.br/pessoas" id="url">
-                              </mat-form-field>
-                          </div>
+                            <div class="example-container">
+                                <mat-form-field appearance="fill" class="col-sm-11">
+                                    <mat-label>Recurso</mat-label>
+                                    <input matInput #input maxlength="10" placeholder="Ex. Pessoas" id="name" required="true">
+                                </mat-form-field>
+                            </div>
 
-                          <div class="example-container">
-                              <mat-form-field class="example-full-width" appearance="fill" class="col-sm-11">
-                                  <mat-label>Detalhes</mat-label>
-                                  <textarea matInput placeholder="Informações complementares" id="details"></textarea>
-                              </mat-form-field>
-                          </div>
+                            <div class="example-container">
+                                <mat-form-field appearance="fill" class="col-sm-6">
+                                    <mat-label>URL</mat-label>
+                                    <input matInput #input maxlength="10"
+                                        placeholder="Ex. https://vaccinec.com.br/pessoas" id="urlName" required="true">
+                                </mat-form-field>
 
+                                <mat-form-field appearance="fill" class="col-sm-5 ml-0">
+                                    <mat-label>Letra de Atalho</mat-label>
+                                    <input matInput #input maxlength="1" id="shortcutLetter">
+                                </mat-form-field>
 
-                          <div class="example-container example-button-row">
-                              <button mat-raised-button color="primary">Salvar</button>
-                              <button mat-raised-button color="warn">Excluir</button>
-                          </div>
+                            </div>
 
-                      </div>
-                  </div>
-              </mat-tab>
+                            <div class="example-container example-button-row">
+                                <button mat-raised-button color="primary">Salvar</button>
+                                <button mat-raised-button color="warn">Excluir</button>
+                            </div>
+
+                        </div>
+                    </div>
+                </mat-tab>
             </mat-tab-group>
         </app-container>
     </div>
