Ajustes gerais, início do CRUD empresa

--- a/VaccineC/src/app/pages/empresa/empresa-agenda/empresa-agenda.component.scss
+++ b/VaccineC/src/app/pages/empresa/empresa-agenda/empresa-agenda.component.scss
@@ -1,15 +1,15 @@
+#add-schedule-btn {
+    z-index: 5;
+    position: fixed;
+    bottom: 10%;
+    margin-bottom: 1rem;
+    right: 8rem;
+}
+
 #search-table {
     display: flex;
     justify-content: center;
     overflow-x: initial;
     margin: 0.5rem;
     border: none
-}
-
-#add-address-btn {
-    z-index: 5;
-    position: fixed;
-    bottom: 10%;
-    margin-bottom: 1rem;
-    right: 8rem;
 }
