--- a/VaccineC/src/app/pages/formas-pagamento/formas-pagamento.component.html
+++ b/VaccineC/src/app/pages/formas-pagamento/formas-pagamento.component.html
@@ -6,64 +6,11 @@
       <mat-tab-group>
 
         <mat-tab label="Pesquisa">
-          <div class="search-group">
-            <div class="col-sm-11 p-0">
-              <mat-form-field class="search-form-field col-sm-10" appearance="fill">
-                <mat-label>Digite a forma de pagamento</mat-label>
-                <input matInput type="text" [(ngModel)]="value">
-                <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
-                  <mat-icon>close</mat-icon>
-                </button>
-              </mat-form-field>
-              <button id="mat-search-button" mat-raised-button color="primary">Pesquisar</button>
-            </div>
-          </div>
-
-          <div id="search-table">
-            <mat-table [dataSource]="dataSource" class="mat-elevation-z3 col-sm-11">
-
-              <ng-container matColumnDef="paymentForm">
-                <mat-header-cell *matHeaderCellDef> Forma de pagamento </mat-header-cell>
-                <mat-cell *matCellDef="let element"> {{ element.paymentForm }} </mat-cell>
-              </ng-container>
-
-              <ng-container matColumnDef="parcels">
-                <mat-header-cell *matHeaderCellDef> Parcelas</mat-header-cell>
-                <mat-cell *matCellDef="let element"> {{ element.parcels}} </mat-cell>
-              </ng-container>
-
-              <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-              <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-            </mat-table>
-          </div>
+          <app-formas-pagamento-pesquisa></app-formas-pagamento-pesquisa>
         </mat-tab>
 
         <mat-tab label="Cadastro">
-          <div class="registration-group">
-            <div class="offset-sm-1 col-sm-11 p-0">
-
-              <div class="example-container">
-                <mat-form-field appearance="fill" class="col-sm-11">
-                  <mat-label>Forma de pagamento</mat-label>
-                  <input matInput #input maxlength="10" placeholder="Ex. Cartão de Crédito" id="paymentForm"
-                    required="true">
-                </mat-form-field>
-              </div>
-
-              <div class="example-container">
-                <mat-form-field appearance="fill" class="col-sm-6">
-                  <mat-label>Máximo de parcelas</mat-label>
-                  <input type="number" matInput #input maxlength="10" id="parcels" required="true">
-                </mat-form-field>
-              </div>
-
-              <div class="example-container example-button-row">
-                <button mat-raised-button color="primary">Salvar</button>
-                <button mat-raised-button color="warn">Excluir</button>
-              </div>
-
-            </div>
-          </div>
+          <app-formas-pagamento-cadastro></app-formas-pagamento-cadastro>
         </mat-tab>
 
       </mat-tab-group>
