--- a/VaccineC/src/app/pages/pessoas/pessoas-enderecos/pessoas-enderecos.component.html
+++ b/VaccineC/src/app/pages/pessoas/pessoas-enderecos/pessoas-enderecos.component.html
@@ -16,7 +16,7 @@
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
 
-        <button mat-fab id="add-phone-btn" (click)="openAddressDialog()" color="primary" aria-label="Add button" matTooltip="Inserir Endereço"
+        <button mat-fab id="add-address-btn" (click)="openAddressDialog()" color="primary" aria-label="Add button" matTooltip="Inserir Endereço"
             matTooltipPosition="above">
             <mat-icon>add</mat-icon>
         </button>
