--- a/VaccineC/src/app/pages/empresa/empresa-pesquisa/empresa-pesquisa.component.html
+++ b/VaccineC/src/app/pages/empresa/empresa-pesquisa/empresa-pesquisa.component.html
@@ -1,8 +1,8 @@
 <div class="search-group">
     <div class="col-sm-11 p-0">
         <mat-form-field class="search-form-field col-sm-10" appearance="fill">
-            <mat-label>Digite o nome da pessoa ou o CPF</mat-label>
-            <input id="organicSearch" matInput type="text" [(ngModel)]="value" placeholder="(mínimo 3 caracteres)">
+            <mat-label>Digite o nome da Empresa</mat-label>
+            <input matInput id="name" type="text" [(ngModel)]="value" placeholder="(mínimo 3 caracteres)">
             <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
                 <mat-icon>close</mat-icon>
             </button>
@@ -15,18 +15,8 @@
     <mat-table [dataSource]="dataSource" class="mat-elevation-z3 col-sm-11">
 
         <ng-container matColumnDef="name">
-            <mat-header-cell *matHeaderCellDef> Nome </mat-header-cell>
+            <mat-header-cell *matHeaderCellDef> Empresa </mat-header-cell>
             <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
-        </ng-container>
-
-        <ng-container matColumnDef="document">
-            <mat-header-cell *matHeaderCellDef> Documento </mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.document}} </mat-cell>
-        </ng-container>
-
-        <ng-container matColumnDef="birthDate">
-            <mat-header-cell *matHeaderCellDef> Data de Nascimento </mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.birthDate}} </mat-cell>
         </ng-container>
 
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
