--- a/VaccineC/src/app/pages/recursos/recursos.component.html
+++ b/VaccineC/src/app/pages/recursos/recursos.component.html
@@ -5,70 +5,11 @@
         <app-container containerTitle="Recursos" containerPath="Gerencial / Recursos">
             <mat-tab-group>
                 <mat-tab label="Pesquisa">
-                    <div class="search-group">
-                        <div class="col-sm-11 p-0">
-                            <mat-form-field class="search-form-field col-sm-10" appearance="fill">
-                                <mat-label>Digite o nome do recurso</mat-label>
-                                <input matInput type="text" [(ngModel)]="value">
-                                <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
-                                    <mat-icon>close</mat-icon>
-                                </button>
-                            </mat-form-field>
-                            <button id="mat-search-button" mat-raised-button color="primary">Pesquisar</button>
-                        </div>
-                    </div>
-
-                    <div id="search-table">
-                        <mat-table [dataSource]="dataSource" class="mat-elevation-z3 col-sm-11">
-
-                            <ng-container matColumnDef="resourceName">
-                                <mat-header-cell *matHeaderCellDef> Recurso </mat-header-cell>
-                                <mat-cell *matCellDef="let element"> {{element.resourceName}} </mat-cell>
-                            </ng-container>
-
-                            <ng-container matColumnDef="resourceUrl">
-                                <mat-header-cell *matHeaderCellDef> URL </mat-header-cell>
-                                <mat-cell *matCellDef="let element"> {{element.resourceUrl}} </mat-cell>
-                            </ng-container>
-
-                            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-                            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-                        </mat-table>
-                    </div>
+                    <app-recursos-pesquisa></app-recursos-pesquisa>
                 </mat-tab>
 
                 <mat-tab label="Cadastro">
-                    <div class="registration-group">
-                        <div class="offset-sm-1 col-sm-11 p-0">
-
-                            <div class="example-container">
-                                <mat-form-field appearance="fill" class="col-sm-11">
-                                    <mat-label>Recurso</mat-label>
-                                    <input matInput #input maxlength="10" placeholder="Ex. Pessoas" id="name" required="true">
-                                </mat-form-field>
-                            </div>
-
-                            <div class="example-container">
-                                <mat-form-field appearance="fill" class="col-sm-6">
-                                    <mat-label>URL</mat-label>
-                                    <input matInput #input maxlength="10"
-                                        placeholder="Ex. https://vaccinec.com.br/pessoas" id="urlName" required="true">
-                                </mat-form-field>
-
-                                <mat-form-field appearance="fill" class="col-sm-5 ml-0">
-                                    <mat-label>Letra de Atalho</mat-label>
-                                    <input matInput #input maxlength="1" id="shortcutLetter">
-                                </mat-form-field>
-
-                            </div>
-
-                            <div class="example-container example-button-row">
-                                <button mat-raised-button color="primary">Salvar</button>
-                                <button mat-raised-button color="warn">Excluir</button>
-                            </div>
-
-                        </div>
-                    </div>
+                    <app-recursos-cadastro></app-recursos-cadastro>
                 </mat-tab>
             </mat-tab-group>
         </app-container>
