Continuação CRUD Empresas

--- a/VaccineC/src/app/pages/empresa/empresa-agenda/empresa-agenda.component.html
+++ b/VaccineC/src/app/pages/empresa/empresa-agenda/empresa-agenda.component.html
@@ -36,7 +36,7 @@
             </tr>
         </table>
 
-        <button mat-fab id="add-schedule-btn" color="primary" aria-label="Add button" matTooltip="Inserir Horário"
+        <button mat-fab id="add-schedule-btn" color="primary" (click)="openScheduleDialog()" aria-label="Add button" matTooltip="Inserir Horário"
             matTooltipPosition="above">
             <mat-icon>add</mat-icon>
         </button>
