--- a/VaccineC/src/app/pages/empresa/empresa-parametros/empresa-parametros.component.html
+++ b/VaccineC/src/app/pages/empresa/empresa-parametros/empresa-parametros.component.html
@@ -21,7 +21,11 @@
             </div>
 
             <div class="div-row-input">
-
+                <mat-form-field appearance="fill" class="col-sm-2">
+                    <mat-label>Cor Horário Disponível</mat-label>
+                    <input type="color" matInput #input placeholder="Ex. 30"
+                        id="scheduleColor" required="true" value="#84d7b0">
+                </mat-form-field>
             </div>
 
             <div class="div-row-input registration-button-row">
