--- a/VaccineC/src/app/pages/gerenciar-usuarios/gerenciar-usuarios.component.html
+++ b/VaccineC/src/app/pages/gerenciar-usuarios/gerenciar-usuarios.component.html
@@ -2,7 +2,7 @@
     <app-side-menu></app-side-menu>
     <div id="content-wrapper" class="d-flex flex-column">
         <app-toolbar></app-toolbar>
-        <app-container containerTitle="Gerenciar Usuários" containerPath="Gerencial / Gerenciar Usuários">
+        <app-container containerTitle="Gerenciar Usuários" containerPath="Gerencial">
             <mat-tab-group>
                 <mat-tab label="Pesquisa"> Pesquisa </mat-tab>
                 <mat-tab label="Cadastro"> Cadastro </mat-tab>
