--- a/VaccineC/src/app/shared/components/container/container.component.scss
+++ b/VaccineC/src/app/shared/components/container/container.component.scss
@@ -76,3 +76,10 @@
 #is-content.is-content-grow {
     margin-left: -7.5em;
 }
+
+.breadcrumb {
+    margin-bottom: 0px;
+    padding: 0.1rem;
+    font-size: 18px;
+    background-color: #fafafa;
+}
