--- a/VaccineC/src/app/pages/empresa/empresas.component.html
+++ b/VaccineC/src/app/pages/empresa/empresas.component.html
@@ -2,7 +2,7 @@
     <app-side-menu></app-side-menu>
     <div id="content-wrapper" class="d-flex flex-column">
         <app-toolbar></app-toolbar>
-        <app-container containerTitle="Empresa" containerPath="Gerencial / Empresa">
+        <app-container containerTitle="Empresa" containerPath="Gerencial">
             <mat-tab-group>
                 <mat-tab label="Pesquisa">
                     <app-empresa-pesquisa></app-empresa-pesquisa>
