--- a/VaccineC/src/app/pages/ocupacoes/ocupacoes.component.html
+++ b/VaccineC/src/app/pages/ocupacoes/ocupacoes.component.html
@@ -2,7 +2,7 @@
     <app-side-menu></app-side-menu>
     <div id="content-wrapper" class="d-flex flex-column">
         <app-toolbar></app-toolbar>
-        <app-container containerTitle="Ocupações" containerPath="Cadastros / Ocupações">
+        <app-container containerTitle="Ocupações" containerPath="Cadastros">
             <mat-tab-group>
                 <mat-tab label="Pesquisa"> Pesquisa </mat-tab>
                 <mat-tab label="Cadastro"> Cadastro </mat-tab>
