--- a/VaccineC/src/app/pages/pessoas/pessoas.component.html
+++ b/VaccineC/src/app/pages/pessoas/pessoas.component.html
@@ -2,7 +2,7 @@
     <app-side-menu></app-side-menu>
     <div id="content-wrapper" class="d-flex flex-column">
         <app-toolbar></app-toolbar>
-        <app-container containerTitle="Pessoas" containerPath="Cadastros / Pessoas">
+        <app-container containerTitle="Pessoas" containerPath="Cadastros">
             <mat-tab-group>
                 <mat-tab label="Pesquisa">
                     <app-pessoas-pesquisa></app-pessoas-pesquisa>
