--- a/VaccineC/src/app/pages/recursos/recursos.component.html
+++ b/VaccineC/src/app/pages/recursos/recursos.component.html
@@ -2,7 +2,7 @@
     <app-side-menu></app-side-menu>
     <div id="content-wrapper" class="d-flex flex-column">
         <app-toolbar></app-toolbar>
-        <app-container containerTitle="Recursos" containerPath="Gerencial / Recursos">
+        <app-container containerTitle="Recursos" containerPath="Gerencial">
             <mat-tab-group>
                 <mat-tab label="Pesquisa">
                     <app-recursos-pesquisa></app-recursos-pesquisa>
