--- a/VaccineC/src/app/pages/visao-faturamento/visao-faturamento.component.html
+++ b/VaccineC/src/app/pages/visao-faturamento/visao-faturamento.component.html
@@ -2,7 +2,7 @@
   <app-side-menu></app-side-menu>
   <div id="content-wrapper" class="d-flex flex-column">
     <app-toolbar></app-toolbar>
-    <app-container containerTitle="Visão de faturamento" containerPath="Gerencial / Visão de faturamento">
+    <app-container containerTitle="Visão de faturamento" containerPath="Gerencial">
       <mat-tab-group>
         <mat-tab label="Pesquisa">
           <div class="div-row-input">
