--- a/VaccineC/src/app/pages/gerenciar-usuarios/gerenciar-usuarios.component.scss
+++ b/VaccineC/src/app/pages/gerenciar-usuarios/gerenciar-usuarios.component.scss
@@ -4,3 +4,10 @@
   bottom: 24px;
   right: 36px;
 }
+:host ::ng-deep .mat-tab-body-wrapper {
+  height: 100% !important;
+}
+
+:host ::ng-deep .mat-tab-group {
+  height: 100% !important;
+}
