--- a/VaccineC/src/app/pages/gerenciar-usuarios/usuarios-pesquisa/usuarios-pesquisa.component.html
+++ b/VaccineC/src/app/pages/gerenciar-usuarios/usuarios-pesquisa/usuarios-pesquisa.component.html
@@ -21,8 +21,8 @@
   </div>
 </div>
 <div id="search-table">
-  <mat-table [dataSource]="dataSource" class="mat-elevation-z3 col-sm-11">
-
+  <mat-table [dataSource]="dataSource"
+             class="mat-elevation-z3 col-sm-11">
       <ng-container matColumnDef="userEmail">
           <mat-header-cell *matHeaderCellDef> Usuário </mat-header-cell>
           <mat-cell *matCellDef="let element"> {{ element.userEmail }} </mat-cell>
@@ -30,12 +30,14 @@
 
       <ng-container matColumnDef="userName">
           <mat-header-cell *matHeaderCellDef> Pessoa </mat-header-cell>
-          <mat-cell *matCellDef="let element"> {{ element.userName }} </mat-cell>
+          <mat-cell *matCellDef="let element">
+            {{ element.userName }} </mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="situation">
           <mat-header-cell *matHeaderCellDef> Situação </mat-header-cell>
-          <mat-cell *matCellDef="let element"> {{ element.situation }} </mat-cell>
+          <mat-cell *matCellDef="let element">
+            {{ element.situation }} </mat-cell>
       </ng-container>
 
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
