--- a/VaccineC/src/app/pages/visao-faturamento/visao-faturamento-pesquisa/visao-faturamento-pesquisa.component.html
+++ b/VaccineC/src/app/pages/visao-faturamento/visao-faturamento-pesquisa/visao-faturamento-pesquisa.component.html
@@ -10,14 +10,8 @@
   </div>
   <mat-divider></mat-divider>
   <div>
-    <mat-card class="example-card-A">
-      <mat-card-subtitle>Previsão de faturamento para maio - 2022</mat-card-subtitle>
-      <mat-divider inset></mat-divider>
-      <mat-card-content>
-        <p></p>
-        <p>Grafico</p>
-      </mat-card-content>
-    </mat-card>
+    <canvas id="myChart">
+    </canvas>
   </div>
   <div>
     <mat-card class="example-card-B">
