--- a/VaccineC/src/app/pages/login/login.component.html
+++ b/VaccineC/src/app/pages/login/login.component.html
@@ -35,7 +35,7 @@
                                                         id="customCheck">
                                                 </div>
                                             </div>
-                                            <a href="/home" class="btn btn-primary btn-user btn-block">
+                                            <a href="/home" (click)="validateLogin()" class="btn btn-primary btn-user btn-block">
                                                 ENTRAR
                                             </a>
 
