--- a/VaccineC/src/app/pages/login/login.component.html
+++ b/VaccineC/src/app/pages/login/login.component.html
@@ -19,14 +19,14 @@
                                                 <input type="checkbox" class="custom-control-input" id="customCheck">
                                             </div>
                                         </div>
-                                        <form class="user">
+                                        <form [formGroup]="loginForm" class="user">
                                             <div class="form-group">
-                                                <input type="email" class="form-control form-control-user"
+                                                <input type="email" formControlName="email" class="form-control form-control-user"
                                                     id="exampleInputEmail" aria-describedby="emailHelp"
                                                     placeholder="Digite seu e-mail">
                                             </div>
                                             <div class="form-group">
-                                                <input type="password" class="form-control form-control-user"
+                                                <input type="password" formControlName="password" class="form-control form-control-user"
                                                     id="exampleInputPassword" placeholder="Digite sua senha">
                                             </div>
                                             <div class="form-group">
