--- a/VaccineC/src/app/pages/gerenciar-usuarios/usuarios-recursos/usuarios-recursos.component.html
+++ b/VaccineC/src/app/pages/gerenciar-usuarios/usuarios-recursos/usuarios-recursos.component.html
@@ -1,12 +1,13 @@
 <div id="search-table">
-  <mat-table [dataSource]="dataSource" class="mat-elevation-z3 col-sm-11">
+  <mat-table [dataSource]="dataSource" class="col-sm-11">
 
-      <ng-container matColumnDef="screens">
-          <mat-header-cell *matHeaderCellDef> Telas </mat-header-cell>
-          <mat-cell *matCellDef="let element"> {{ element.screens }} </mat-cell>
-      </ng-container>
+    <ng-container matColumnDef="screens">
+      <mat-header-cell *matHeaderCellDef> Recurso </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{ element.screens }} </mat-cell>
+    </ng-container>
 
-      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    
   </mat-table>
 </div>
