--- a/VaccineC/src/app/pages/empresa/empresa-agenda/empresa-agenda.component.scss
+++ b/VaccineC/src/app/pages/empresa/empresa-agenda/empresa-agenda.component.scss
@@ -18,3 +18,8 @@
     margin-right: 0.75rem;
     margin-left: 0.75rem;
 }
+
+:host ::ng-deep .mat-table {
+    border-radius: 0.75rem !important;
+    box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 10%), 0px 3px 4px 0px rgb(0 0 0 / 10%), 0px 1px 8px 0px rgb(0 0 0 / 10%);
+}
