--- a/VaccineC/src/app/pages/formas-pagamento/formas-pagamento-pesquisa/formas-pagamento-pesquisa.component.html
+++ b/VaccineC/src/app/pages/formas-pagamento/formas-pagamento-pesquisa/formas-pagamento-pesquisa.component.html
@@ -12,7 +12,7 @@
 </div>
 
 <div id="search-table">
-    <mat-table [dataSource]="dataSource" class="mat-elevation-z3 col-sm-11">
+    <mat-table [dataSource]="dataSource" class="col-sm-11">
 
         <ng-container matColumnDef="paymentForm">
             <mat-header-cell *matHeaderCellDef> Forma de pagamento </mat-header-cell>
