--- a/VaccineC/src/app/pages/pessoas/pessoas-enderecos/pessoas-enderecos.component.scss
+++ b/VaccineC/src/app/pages/pessoas/pessoas-enderecos/pessoas-enderecos.component.scss
@@ -5,3 +5,8 @@
     margin: 0.5rem;
     border: none
 }
+
+:host ::ng-deep .mat-table {
+    border-radius: 0.75rem;
+    box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 10%), 0px 3px 4px 0px rgb(0 0 0 / 10%), 0px 1px 8px 0px rgb(0 0 0 / 10%);
+}
