--- a/VaccineC/src/app/pages/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
+++ b/VaccineC/src/app/pages/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
@@ -12,7 +12,7 @@
 </div>
 
 <div id="search-table">
-    <mat-table [dataSource]="dataSource" class="mat-elevation-z3 col-sm-11">
+    <mat-table [dataSource]="dataSource" class="col-sm-11">
 
         <ng-container matColumnDef="name">
             <mat-header-cell *matHeaderCellDef> Nome </mat-header-cell>
