--- a/VaccineC/src/app/pages/produto/produto-resumo/produto-resumo.component.scss
+++ b/VaccineC/src/app/pages/produto/produto-resumo/produto-resumo.component.scss
@@ -41,3 +41,8 @@ tr.example-element-row:not(.example-expanded-row):active {
 .example-element-description-attribution {
     opacity: 0.5;
 }
+
+:host ::ng-deep .mat-table {
+    border-radius: 0.75rem !important;
+    box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 10%), 0px 3px 4px 0px rgb(0 0 0 / 10%), 0px 1px 8px 0px rgb(0 0 0 / 10%);
+}
