--- a/VaccineC/src/app/pages/visao-faturamento/visao-faturamento-pesquisa/visao-faturamento-pesquisa.component.html
+++ b/VaccineC/src/app/pages/visao-faturamento/visao-faturamento-pesquisa/visao-faturamento-pesquisa.component.html
@@ -1,31 +1,34 @@
 <div>
   <div>
-    <mat-form-field class="margin-form" appearance="fill">
+    <mat-form-field class="margin-form" appearance="fill" style="font-size:14px">
       <mat-label>Selecione o ano</mat-label>
-      <mat-select id="kindOfPerson" required="true">
+      <mat-select id="year" required="true">
         <mat-option value="2022">2022</mat-option>
-        <mat-option value="2019">2019</mat-option>
+        <mat-option value="2019">2021</mat-option>
       </mat-select>
     </mat-form-field>
   </div>
   <mat-divider></mat-divider>
-  <div>
-    <canvas id="myChart">
-    </canvas>
-  </div>
-  <div>
-    <mat-card class="example-card-B">
-      <mat-card-subtitle>Previsão de faturamento para maio - 2022</mat-card-subtitle>
-      <mat-divider inset></mat-divider>
-      <mat-card-content>
-        <p></p>
-        <p>Data atual: <b>{{ currentDate }}</b></p>
-        <p>Faturamento atual: <b>{{ invoicing }}</b></p>
-        <p>Data de fechamento: <b>{{ endDate }}</b></p>
-        <p>Estimativa de lucro visando o mês anterior: <b>{{ profitEstimate }}</b></p>
-      </mat-card-content>
-      <mat-progress-bar></mat-progress-bar>
+  <div class="d-flex justify-content-around m-2 mt-3">
+    <mat-card class="card-bar-chart">
+      <canvas height="300" width="500" baseChart [data]="barChartData" [options]="barChartOptions"
+        [plugins]="barChartPlugins" [type]="barChartType" (chartHover)="chartHovered($event)"
+        (chartClick)="chartClicked($event)">
+      </canvas>
     </mat-card>
-
+    <div class="d-flex">
+      <mat-card class="card-info">
+        <mat-card-subtitle>Previsão de faturamento para maio - 2022</mat-card-subtitle>
+        <mat-divider inset></mat-divider>
+        <mat-card-content>
+          <p></p>
+          <p>Data atual: <b>{{ currentDate }}</b></p>
+          <p>Faturamento atual: <b>{{ invoicing }}</b></p>
+          <p>Data de fechamento: <b>{{ endDate }}</b></p>
+          <p>Estimativa de lucro visando o mês anterior: <b>{{ profitEstimate }}</b></p>
+        </mat-card-content>
+        <mat-progress-bar></mat-progress-bar>
+      </mat-card>
+    </div>
   </div>
 </div>
