--- a/VaccineC/src/app/pages/visao-faturamento/visao-faturamento-pesquisa/visao-faturamento-pesquisa.component.scss
+++ b/VaccineC/src/app/pages/visao-faturamento/visao-faturamento-pesquisa/visao-faturamento-pesquisa.component.scss
@@ -1,18 +1,4 @@
-.example-card-A {
-  width: 400px;
-  position: fixed;
-  margin-top: 100px;
-  margin-left: 30px;
-  left: 20%;
-}
-
-.example-card-B {
-  width: 400px;
-  position: fixed;
-  margin-top: 100px;
-  right: 15%;
-}
-
-.margin-form {
-  margin-left: 30px;
+.card-info {
+    height: 15rem;
+    align-self: center;
 }
